# sidewall-coring-detection

./: .gitignore  README.md  pyproject.toml
image_log_project/: contour_coring_detector.ipynb  coring_detector.py  initial_test.ipynb  optimize_coring_detector.ipynb  utils.py
image_log_project/.ipynb_checkpoints/: contour_coring_detector-checkpoint.ipynb  initial_test-checkpoint.ipynb
old_codes/: labels_features.ipynb
