[tool.poetry]
name = "image-log-project"
version = "0.1.0"
description = ""
authors = ["Anthony Bet <anthony.bet@ltrace.com.br>"]
readme = "README.md"
packages = [{include = "image_log_project"}]

[tool.poetry.dependencies]
python = "^3.10"
scikit-image = "^0.21.0"
matplotlib = "^3.8.0"
jupyterlab = "^4.0.6"
opencv-python = "^4.8.1.78"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
